# swe-bench-trial

./: .gitignore  README.md  pyproject.toml
.github/workflows/: evaluate.yml
eval-results/run_evaluation/trial-01/claude-sonnet-4-6/astropy__astropy-12907/: patch.diff  test_output.txt
outputs/: predictions_agent.jsonl  predictions_one_shot.jsonl
prompts/: prompt_template.txt
src/: agent.py  dataset.py  main.py  model.py  one_shot.py  prompt.py  retrieval.py  runner.py
tests/: test_agent.py  test_dataset.py  test_main.py  test_one_shot.py  test_prompt.py  test_retrieval.py  test_runner.py
