[project]
name = "swe-bench-trial"
version = "0.1.0"
description = "SWE-bench Lite inference trial with Claude Sonnet 4.6"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.20.0",
    "mini-swe-agent>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pyright>=1.1.0",
    "ruff>=0.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
